[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.40.0", features = ["rand"] }
rust_decimal_macros = "1.40.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.10.0", features = ["std_rng"] }
rand_distr = "0.6.0"

[[bench]]
name = "orderbook_bench"
harness = false